--- a/dependencies/admin-media-report/templates/library-report.mjml
+++ b/dependencies/admin-media-report/templates/library-report.mjml
@@ -1,11 +1,11 @@
 <mj-section background-color="#ffffff" padding-top="20px">
             <mj-column width="100%" >
-                
                 <mj-text align="center" color="#2a5cab" font-size="20px" font-family="Lato, Helvetica, Arial, sans-serif" padding="10px 25px"><strong>{{libname}}                    </strong>
                 </mj-text>
                 <mj-text align="center" color="#2a5cab" font-size="15px" font-family="Lato, Helvetica, Arial, sans-serif" padding="10px 25px">
                     Total Videos: {{total}}    
                     </mj-text>
+                <mj-image width="300px" src="cid:test" />
                 <mj-table align="center" width="90%" padding-bottom="20px">
                     <tr style="border-bottom:1px solid #ecedee;text-align:left;padding:15px 0;">
                         <th style="padding: 0 15px 0 0;">Metric</th>
